--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Kavya and this is my first web app
         </div>
+        <script>
+            alert('Hi!I am a javascript!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
