[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
-        
+        <footer>
+        &copy;   
+        </footer>
     </body>
+    
 </html>
