--- a/ui/index.html
+++ b/ui/index.html
@@ -13,9 +13,9 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
-        <footer>
+     /*   <footer>
         &copy;   
-     </footer>
+     </footer>*/
     </body>
     
 </html>
