[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div id='text' class="center text-big bold">
-            <a href="www.google.com">Home</a>
+            <a href="https://www.google.com">Home</a>
             Hi! I am Kavya and this is my first web app
         </div>
         <script type="text/javascript" src="/ui/main.js">
