[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,11 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
+        <div id='head'>
+        <h1>
+            CREATIVE SCRIBBLES
+        </h1>
+        </div>
         <div id='text' class="center text-big bold">
             <a href="https://www.google.com">Home</a>
             Hi! I am Kavya and this is my first web app
