[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id='head'>
+        <div class="head">
         <h1>
             CREATIVE SCRIBBLES
         </h1>
