[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,12 @@
     </head>
     <body>
         <div class="head">
-        <h1>
-            CREATIVE SCRIBBLES
-        </h1>
+            <title>
+                Creative Scribbles
+            </title>
         </div>
-        
         <div id='text' class="center text-big bold">
-            <a href="https://www.google.com">Home</a>
-            Hi! I am Kavya and this is my first web app
+           
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
